--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "barryvdh/laravel-debugbar": "^3.1",
         "barryvdh/laravel-ide-helper": "^2.4",
         "doctrine/dbal": " ~2.3",
+        "endroid/qr-code": "~2.5",
         "fideloper/proxy": "~3.3",
         "jacobcyl/ali-oss-storage": "^2.1",
         "laravel/framework": "5.5.*",
@@ -16,6 +17,7 @@
         "mews/captcha": "^2.2",
         "mrgoon/aliyun-sms": "dev-master",
         "overtrue/laravel-ueditor": "~1.0",
+        "overtrue/laravel-wechat": "~3.0",
         "predis/predis": "^1.1",
         "spatie/laravel-permission": "^2.12"
     },
